infra/k8s/client-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: # Tell the service to direct incoming traffic to the pod with label of event-bus. See a deployment config named labels in template object above
    app: client
  type: ClusterIP # Cluster IP service. Governs/Establishes inter-pod communications
  ports:
    - name: client
      protocol: TCP
      port: 3000 # Entry port to the container. Keep it same as targetPort for easier understanding.
      targetPort: 3000 # This is a port being listened on in the container. In this case client react app port.
