infra/k8s/comments-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector: # Tell the service to direct incoming traffic to the pod with label of event-bus. See a deployment config named labels in template object above
    app: comments
  type: ClusterIP # Cluster IP service. Governs/Establishes inter-pod communications
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # Entry port to the container. Keep it same as targetPort for easier understanding.
      targetPort: 4001 # This is a port being listened on in the container. In this case comments node.js app port.
