infra/k8s/event-bus-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector: # Tell the service to direct incoming traffic to the pod with label of event-bus. See a deployment config named labels in template object above
    app: event-bus
  type: ClusterIP # Cluster IP service. Governs/Establishes inter-pod communications
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # Entry port to the container. Keep it same as targetPort for easier understanding.
      targetPort: 4005 # This is a port being listened on in the container. In this case event-bus node.js app port.
