infra/k8s/moderation-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector: # Tell the service to direct incoming traffic to the pod with label of event-bus. See a deployment config named labels in template object above
    app: moderation
  type: ClusterIP # Cluster IP service. Governs/Establishes inter-pod communications
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # Entry port to the container. Keep it same as targetPort for easier understanding.
      targetPort: 4003 # This is a port being listened on in the container. In this case moderation node.js app port.
