infra/k8s/query-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector: # Tell the service to direct incoming traffic to the pod with label of event-bus. See a deployment config named labels in template object above
    app: query
  type: ClusterIP # Cluster IP service. Governs/Establishes inter-pod communications
  ports:
    - name: query
      protocol: TCP
      port: 4002 # Entry port to the container. Keep it same as targetPort for easier understanding.
      targetPort: 4002 # This is a port being listened on in the container. In this case query node.js app port.
