infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # needed for using regex in config
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service: # cluster ip service to reach out to
                name: posts-api-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /posts/?(.*)/comments # nginx does not support wildcard in routes (e.g :id in route) so we use regex. Regex must be added in annotations above.
            pathType: Prefix
            backend: # cluster ip service to reach out to
              service:
                name: comments-srv
                port:
                  number: 4001
          - path: / # For react app. For actual app with react router there would be regex here like "/?(.*)".
          # Paths like always have be at the end.Paths are ordered from greatest importance down to least importance.If this is moved top, any route will match this will be served.
            pathType: Prefix
            backend: # cluster ip service to reach out to
              service:
                name: client-srv
                port:
                  number: 3000
